Add pending tweets button and distinction to model

--- a/client/twitterTimeline.html
+++ b/client/twitterTimeline.html
@@ -1,5 +1,6 @@
 <template name="twitterTimeline">
   <h1>Tweets</h1>
+  <button class="pending">You have {{pendingTweetCount}} new Tweets</button>
   {{> pages}}
   {{> pagesNav}}
 
