--- a/client/head.html
+++ b/client/head.html
@@ -1,5 +1,6 @@
 <head>
-  <title>sw-twitter-app</title>
+  <title>Paratweet</title>
 
   <script src="https://spiceworks.github.io/spiceworks-js-sdk/dist/spiceworks-sdk.js" type="text/javascript"></script>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:300,700,500' rel='stylesheet' type='text/css'>
 </head>
